# viscourse

./: BacteriaVis.cxx  CMakeLists.txt  DelimitedTextReader.cxx  README.md  inputData.csv
bacteriavis/: BacteriaVis.cxx  inputData.csv
clasecolor/: Color_ViendoCanalesCMYK.m  Color_ViendoCanalesXYZ.m  clasecolor.m
marchingsquares/: marchingsquares.m
perceptualkernels/: PerceptualKernels.m  contador.mat  perceptualKernelInforme.odt  perceptualkernel1.mat  perceptualkernel2.mat  perceptualkernel4.mat  perceptualkernel5.mat  perceptualtest1.mat  tripletPerceptualKernels.m
perceptualkernels/informe/: perceptualKernelInforme.odt
perceptualkernels/outputs/: perceptualkernel0.mat  perceptualkernel3.mat  perceptualtest2.mat
